hphp/hack/test/package_v2/package_access/cross_package_generics.php.exp.v2
error: Typing[4472] Cannot access an element which belongs to package pkg2 from package pkg1 [1]
-> This is from cross_package_generics.php--foo.php [2]
-> cross_package_generics.php--foo.php belongs to package pkg2 [3]
-> But cross_package_generics.php--bar.php is in package pkg1 [4]
-> And package pkg1 does not include package pkg2 [4]

cross_package_generics.php--bar.php:9:23
    7 | 
    8 | class Bar1 implements IBar<TFoo> {} // error when package_v2_allow_all_generics_violations is turned off
[1] 9 | class Bar2 implements IFoo<TBar> {} // error
   10 | class Bar3<T as TFoo> {} // ok
   11 | class Bar4<T as Foo> {} // ok

cross_package_generics.php--foo.php:5:11
    1 | <?hh
    2 | // package pkg2
[3] 3 | <<file: __PackageOverride('pkg2')>>
    4 | type TFoo = int;
[2] 5 | interface IFoo<T> {}
    6 | class Foo {}

PACKAGES.toml:3:11
    1 | [packages]
    2 | 
[4] 3 | [packages.pkg1]
    4 | include_paths=["//"]
    5 | 

1 error found
